@@ -3,6 +3,9 @@
 	* src/fstream.cpp: Fix buffer overflow in _Filebuf_base::_M_read method
 	for the Win32 platform implementation thanks Wlodek Szafran report.
 
+	* src/c_locale_dummy/c_locale_dummy.c: Patch from Michael Fink for wrong C
+	prototype.
+
 2005-05-17  Petr Ovtchenkov  <ptr@island...>
 
 	* test/unit/locale_test.cpp: some fixes in moneypunct test, related
